Fixed runtime dependencies location

--- a/inference-engine/src/snippets/CMakeLists.txt
+++ b/inference-engine/src/snippets/CMakeLists.txt
@@ -56,3 +56,8 @@ openvino_developer_export_targets(COMPONENT inference_engine TARGETS ${TARGET_NA
 # install(TARGETS ${TARGET_NAME}
 #         RUNTIME DESTINATION ${IE_CPACK_RUNTIME_PATH} COMPONENT core
 #         LIBRARY DESTINATION ${IE_CPACK_LIBRARY_PATH} COMPONENT core)
+
+# TODO: remove once install commands above are commented out
+install(TARGETS ${TARGET_NAME}
+        RUNTIME DESTINATION tests COMPONENT tests
+        LIBRARY DESTINATION tests COMPONENT tests)
