--- a/inference-engine/tests/ie_test_utils/unit_test_utils/mocks/mock_engine/CMakeLists.txt
+++ b/inference-engine/tests/ie_test_utils/unit_test_utils/mocks/mock_engine/CMakeLists.txt
@@ -41,7 +41,7 @@ target_compile_definitions(${TARGET_NAME} PRIVATE IMPLEMENT_INFERENCE_ENGINE_PLU
 
 if(ENABLE_DEV_PKG_INSTALL)
     install(TARGETS ${TARGET_NAME}
-            RUNTIME DESTINATION tests
-            LIBRARY DESTINATION tests
+            RUNTIME DESTINATION ${IE_CPACK_RUNTIME_PATH}
+            LIBRARY DESTINATION ${IE_CPACK_LIBRARY_PATH}
             COMPONENT tests)
 endif()
