Disable GNA unit tests

--- a/inference-engine/tests_deprecated/unit/CMakeLists.txt
+++ b/inference-engine/tests_deprecated/unit/CMakeLists.txt
@@ -19,6 +19,9 @@ file(GLOB
         inference_engine_tests/*.cpp
         )
 
+# TODO: enable back
+set(ENABLE_GNA OFF)
+
 if (ENABLE_GNA)
     file(GLOB
             GNA_TESTS
