Revert "Disable GNA unit tests"
This reverts commit da5398622f3b8f7580d181b715bb24d5c93757d0.

--- a/inference-engine/src/inference_engine/CMakeLists.txt
+++ b/inference-engine/src/inference_engine/CMakeLists.txt
@@ -273,6 +273,13 @@ install(FILES $<TARGET_FILE_DIR:${TARGET_NAME}>/plugins.xml
         DESTINATION ${IE_CPACK_RUNTIME_PATH}
         COMPONENT core)
 
+if(ENABLE_DEV_PKG_INSTALL)
+    # InferenceEngineUnitTest
+    install(FILES $<TARGET_FILE_DIR:${TARGET_NAME}>/plugins.xml
+            DESTINATION tests/lib
+            COMPONENT core)
+endif()
+
 # Install cmake scripts
 
 install(EXPORT InferenceEngineTargets
