--- a/inference-engine/src/inference_engine/CMakeLists.txt
+++ b/inference-engine/src/inference_engine/CMakeLists.txt
@@ -273,12 +273,11 @@ install(FILES $<TARGET_FILE_DIR:${TARGET_NAME}>/plugins.xml
         DESTINATION ${IE_CPACK_RUNTIME_PATH}
         COMPONENT core)
 
-if(ENABLE_DEV_PKG_INSTALL)
-    # InferenceEngineUnitTest
-    install(FILES $<TARGET_FILE_DIR:${TARGET_NAME}>/plugins.xml
-            DESTINATION tests/lib
-            COMPONENT tests)
-endif()
+# for InferenceEngineUnitTest
+install(FILES $<TARGET_FILE_DIR:${TARGET_NAME}>/plugins.xml
+        DESTINATION tests/lib
+        COMPONENT tests
+        EXCLUDE_FROM_ALL)
 
 # Install cmake scripts
 
