--- a/inference-engine/tests_deprecated/fluid_preproc/CMakeLists.txt
+++ b/inference-engine/tests_deprecated/fluid_preproc/CMakeLists.txt
@@ -35,8 +35,7 @@ endif()
 add_test(NAME ${TARGET} COMMAND ${TARGET})
 set_property(TEST ${TARGET} PROPERTY LABELS IE PREPROC)
 
-if(ENABLE_DEV_PKG_INSTALL)
-    install(TARGETS ${TARGET}
-            RUNTIME DESTINATION tests
-            COMPONENT tests)
-endif()
+install(TARGETS ${TARGET}
+        RUNTIME DESTINATION tests
+        COMPONENT tests
+        EXCLUDE_FROM_ALL)
