--- a/inference-engine/tests_deprecated/unit/CMakeLists.txt
+++ b/inference-engine/tests_deprecated/unit/CMakeLists.txt
@@ -125,10 +125,9 @@ endif()
 add_test(NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
 set_property(TEST ${TARGET_NAME} PROPERTY LABELS IE)
 
-if(ENABLE_DEV_PKG_INSTALL)
-    install(TARGETS ${TARGET_NAME}
-            RUNTIME DESTINATION tests
-            COMPONENT tests)
-endif()
+install(TARGETS ${TARGET_NAME}
+        RUNTIME DESTINATION tests
+        COMPONENT tests
+        EXCLUDE_FROM_ALL)
 
 add_dependencies(${TARGET_NAME} mock_engine)
