--- a/ngraph/test/frontend/CMakeLists.txt
+++ b/ngraph/test/frontend/CMakeLists.txt
@@ -15,9 +15,6 @@ add_dependencies(unit-test mock1_ngraph_frontend)
 
 add_clang_format_target(mock1_ngraph_frontend_clang FOR_TARGETS mock1_ngraph_frontend)
 
-if(ENABLE_DEV_PKG_INSTALL)
-    install(TARGETS mock1_ngraph_frontend
-            RUNTIME DESTINATION ${NGRAPH_INSTALL_LIB}
-            LIBRARY DESTINATION ${NGRAPH_INSTALL_LIB}
-            COMPONENT tests)
-endif()
+install(TARGETS mock1_ngraph_frontend
+        RUNTIME DESTINATION ${NGRAPH_INSTALL_LIB} COMPONENT tests EXCLUDE_FROM_ALL
+        LIBRARY DESTINATION ${NGRAPH_INSTALL_LIB} COMPONENT tests EXCLUDE_FROM_ALL)
