Removed extra cmake options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,8 +89,8 @@ function(build_ngraph)
         set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELEASE ON)
     endif()
 
-    ie_cpack_add_component(ngraph IRC REQUIRED)
-    ie_cpack_add_component(ngraph_dev IRC REQUIRED DEPENDS ngraph)
+    ie_cpack_add_component(ngraph REQUIRED)
+    ie_cpack_add_component(ngraph_dev REQUIRED DEPENDS ngraph)
 
     add_subdirectory(ngraph)
     set(NGRAPH_LIBRARIES ngraph PARENT_SCOPE)
@@ -163,7 +163,7 @@ ie_shellcheck_process(DIRECTORY "${OpenVINO_MAIN_SOURCE_DIR}"
 
 # install setupvars
 
-ie_cpack_add_component(setupvars IRC REQUIRED)
+ie_cpack_add_component(setupvars REQUIRED)
 
 if(UNIX)
     install(PROGRAMS scripts/setupvars/setupvars.sh
@@ -178,7 +178,7 @@ endif()
 # install install_dependencies
 
 if(UNIX)
-    ie_cpack_add_component(install_dependencies IRC REQUIRED)
+    ie_cpack_add_component(install_dependencies REQUIRED)
     install(DIRECTORY scripts/install_dependencies/
             DESTINATION install_dependencies
             COMPONENT install_dependencies)
@@ -186,7 +186,7 @@ endif()
 
 # install files for demo
 
-ie_cpack_add_component(demo_scripts IRC DEPENDS core)
+ie_cpack_add_component(demo_scripts DEPENDS core)
 
 if(UNIX)
     install(DIRECTORY scripts/demo/
@@ -202,4 +202,4 @@ elseif(WIN32)
             PATTERN *.sh EXCLUDE)
 endif()
 
-ie_cpack(${IE_CPACK_COMPONENTS_IRC})
+ie_cpack(${IE_CPACK_COMPONENTS_ALL})
