--- a/inference-engine/src/snippets/CMakeLists.txt
+++ b/inference-engine/src/snippets/CMakeLists.txt
@@ -59,6 +59,5 @@ openvino_developer_export_targets(COMPONENT inference_engine TARGETS ${TARGET_NA
 
 # TODO: remove once install commands above are commented out
 install(TARGETS ${TARGET_NAME}
-        RUNTIME DESTINATION tests COMPONENT tests
-        LIBRARY DESTINATION tests COMPONENT tests
-        EXCLUDE_FROM_ALL)
+        RUNTIME DESTINATION tests COMPONENT tests EXCLUDE_FROM_ALL
+        LIBRARY DESTINATION tests COMPONENT tests EXCLUDE_FROM_ALL)
