--- a/inference-engine/tools/vpu/vpu_perfcheck/CMakeLists.txt
+++ b/inference-engine/tools/vpu/vpu_perfcheck/CMakeLists.txt
@@ -39,7 +39,7 @@ endfunction()
 if(ENABLE_MYRIAD)
     add_perfcheck_target(myriad_perfcheck myriadPlugin)
 
-    ie_cpack_add_component(myriad_tools IRC DEPENDS myriad)
+    ie_cpack_add_component(myriad_tools DEPENDS myriad)
 
     install(TARGETS myriad_perfcheck
             RUNTIME DESTINATION ${IE_CPACK_RUNTIME_PATH}
