Added install rules for tests (#6344)
* Moved cmake/templates to <root>

* Removed ngraph versioning, reused IE one

* Merged converage

* Removed duplicatde ngraph cmake options

* Moved dependencies to <root>/cmake

* Removed installing of VERSION

* Start #1

* cpack

* Added component type

* Added installation of tests targets

* Added ngraph tests target install

* Fixed runtime dependencies location

* Disable GNA unit tests

* Revert "Disable GNA unit tests"

This reverts commit da5398622f3b8f7580d181b715bb24d5c93757d0.

* Installed only core component

* Replaced ENABLE_DEV_PKG_INSTALL with EXCLUDE_FROM_ALL

* Removed extra cmake options

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -25,23 +25,33 @@ if(NOT ENABLE_DOCKER)
         set(InferenceEngine_DIR ${CMAKE_BINARY_DIR})
     endif()
 
-    if (NGRAPH_ONNX_IMPORT_ENABLE)
+    if(NGRAPH_ONNX_IMPORT_ENABLE)
         add_subdirectory(onnx_custom_op)
     endif()
     add_subdirectory(template_extension)
 
     set(all_docs_targets
         ie_docs_snippets
-        template_extension
-        templatePlugin TemplateBehaviorTests TemplateFunctionalTests)
+        template_extension templatePlugin templateFuncTests)
     foreach(target_name IN LISTS all_docs_targets)
-        if (TARGET ${target_name})
+        if(TARGET ${target_name})
             set_target_properties(${target_name} PROPERTIES FOLDER docs)
             if(WIN32)
                 set_target_properties(${target_name} PROPERTIES COMPILE_PDB_NAME ${target_name})
             endif()
         endif()
     endforeach()
+
+    # install
+
+    set(install_targets template_extension)
+    if(ENABLE_TEMPLATE_PLUGIN)
+        list(APPEND install_targets templatePlugin templateFuncTests)
+    endif()
+
+    install(TARGETS ${install_targets}
+            RUNTIME DESTINATION tests COMPONENT tests EXCLUDE_FROM_ALL
+            LIBRARY DESTINATION tests COMPONENT tests EXCLUDE_FROM_ALL)
 endif()
 
 set(LINKCHECKER_PY "" CACHE FILEPATH "Path to linkchecker.py for documentation check")
