--- a/cmake/templates/ngraphConfig.cmake.in
+++ b/cmake/templates/ngraphConfig.cmake.in
@@ -18,16 +18,22 @@
 # FindNGraph
 # ------
 #
-# This will define the following variables:
+# This script defines the following variables and imported targets:
 #
-#   ngraph_FOUND               - True if the system has the nGraph library
-#   NGRAPH_LIBRARIES           - nGraph libraries
-#   ngraph::ngraph             - nGraph core target
+#   ngraph::ngraph                         - nGraph core target
+#   ngraph_FOUND                           - True if the system has the nGraph library
+#   NGRAPH_LIBRARIES                       - nGraph libraries
 #
-#   ngraph_onnx_importer_FOUND - True if the system has onnx_importer library
-#   ONNX_IMPORTER_LIBRARIES    - ONNX importer libraries
-#   ngraph::onnx_importer      - ONNX importer target
+# Frontends:
 #
+#   ngraph::frontend_manager               - nGraph frontend manager
+#
+#   ngraph_onnx_importer_FOUND             - True if the system has onnx_importer library
+#   ngraph::onnx_importer                  - ONNX importer target (optional)
+#   ONNX_IMPORTER_LIBRARIES                - ONNX importer libraries
+#
+#   ngraph_paddlepaddle_frontend_FOUND     - True if the system has PDPD frontend
+#   ngraph::paddlepaddle_ngraph_frontend   - nGraph PDPD frontend (optional)
 #
 
 @PACKAGE_INIT@
@@ -43,5 +49,7 @@ set(ngraph_onnx_importer_FOUND @NGRAPH_ONNX_IMPORT_ENABLE@)
 if(ngraph_onnx_importer_FOUND)
     set(ONNX_IMPORTER_LIBRARIES ngraph::onnx_importer)
 endif()
+
+set(ngraph_paddlepaddle_frontend_FOUND @NGRAPH_PDPD_FRONTEND_ENABLE@)
 
 check_required_components(ngraph)
