Revise Mish op (#6009)
* use RTTI macro

Signed-off-by: Li, Tingqian <tingqian.li@intel.com>

* add backend test

Signed-off-by: Li, Tingqian <tingqian.li@intel.com>

* add visitor API test

Signed-off-by: Li, Tingqian <tingqian.li@intel.com>

* add checks for input size and type in validate_and_infer_types()

Signed-off-by: Li, Tingqian <tingqian.li@intel.com>

* add test for incompatible input data types to type_prop

Signed-off-by: Li, Tingqian <tingqian.li@intel.com>

* disable fp16 tests for IE backend

Signed-off-by: Li, Tingqian <tingqian.li@intel.com>

* fix bugs:
add static linkage to mish_test
use T instead of double for calculation of expected answer

Signed-off-by: Li, Tingqian <tingqian.li@intel.com>

--- a/ngraph/test/CMakeLists.txt
+++ b/ngraph/test/CMakeLists.txt
@@ -251,6 +251,7 @@ set(SRC
     visitors/op/lstm_sequence.cpp
     visitors/op/matmul.cpp
     visitors/op/max_pool.cpp
+    visitors/op/mish.cpp
     visitors/op/mod.cpp
     visitors/op/mvn.cpp
     visitors/op/negative.cpp
@@ -414,6 +415,7 @@ set(MULTI_TEST_SRC
     backend/maximum.in.cpp
     backend/max_pool.in.cpp
     backend/minimum.in.cpp
+    backend/mish.in.cpp
     backend/mod.in.cpp
     backend/multiple_backends.in.cpp
     backend/multiple_result.in.cpp
