--- a/inference-engine/src/inference_engine/CMakeLists.txt
+++ b/inference-engine/src/inference_engine/CMakeLists.txt
@@ -274,10 +274,13 @@ install(FILES $<TARGET_FILE_DIR:${TARGET_NAME}>/plugins.xml
         COMPONENT core)
 
 # for InferenceEngineUnitTest
-install(FILES $<TARGET_FILE_DIR:${TARGET_NAME}>/plugins.xml
-        DESTINATION tests/lib
-        COMPONENT tests
-        EXCLUDE_FROM_ALL)
+if(WIN32)
+    install(FILES $<TARGET_FILE_DIR:${TARGET_NAME}>/plugins.xml
+            DESTINATION tests COMPONENT tests EXCLUDE_FROM_ALL)
+else()
+    install(FILES $<TARGET_FILE_DIR:${TARGET_NAME}>/plugins.xml
+            DESTINATION tests/lib COMPONENT tests EXCLUDE_FROM_ALL)
+endif()
 
 # Install cmake scripts
 
