--- a/inference-engine/src/readers/ir_reader_v7/CMakeLists.txt
+++ b/inference-engine/src/readers/ir_reader_v7/CMakeLists.txt
@@ -53,5 +53,5 @@ install(TARGETS ${TARGET_NAME}
 
 # for InferenceEngineUnitTest
 install(TARGETS ${TARGET_NAME}
-        RUNTIME DESTINATION tests/lib COMPONENT tests EXCLUDE_FROM_ALL
+        RUNTIME DESTINATION tests COMPONENT tests EXCLUDE_FROM_ALL
         LIBRARY DESTINATION tests/lib COMPONENT tests EXCLUDE_FROM_ALL)
