--- a/ngraph/test/runtime/CMakeLists.txt
+++ b/ngraph/test/runtime/CMakeLists.txt
@@ -65,8 +65,8 @@ endif()
 target_include_directories(ngraph_backend PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 install(TARGETS ngraph_backend
-        RUNTIME DESTINATION tests COMPONENT tests EXCLUDE_FROM_ALL
-        LIBRARY DESTINATION tests COMPONENT tests EXCLUDE_FROM_ALL)
+        RUNTIME DESTINATION ${NGRAPH_INSTALL_LIB} COMPONENT tests EXCLUDE_FROM_ALL
+        LIBRARY DESTINATION ${NGRAPH_INSTALL_LIB} COMPONENT tests EXCLUDE_FROM_ALL)
 
 add_subdirectory(interpreter)
 add_subdirectory(ie)
