--- a/ngraph/python/requirements_test.txt
+++ b/ngraph/python/requirements_test.txt
@@ -3,11 +3,12 @@ flake8-bugbear==21.4.3
 flake8-comprehensions==3.3.0
 flake8-docstrings==1.6.0
 flake8-quotes==3.2.0
-mypy==0.812
+mypy==0.910
 onnx==1.8.1
 pydocstyle==5.1.1
 pytest-xdist==2.2.1
 pytest==6.1.2
 retrying==1.3.3
 tox==3.23.1
+types-setuptools==57.0.0
 wheel==0.36.2
