--- a/inference-engine/src/cldnn_engine/CMakeLists.txt
+++ b/inference-engine/src/cldnn_engine/CMakeLists.txt
@@ -32,11 +32,10 @@ target_link_libraries(${TARGET_NAME} PRIVATE clDNN_lib pugixml
                                              inference_engine_lp_transformations
                                              ${NGRAPH_LIBRARIES})
 
-set(CLDNN_TOP_FOLDER "${IE_MAIN_SOURCE_DIR}/thirdparty/clDNN")
 target_include_directories(${TARGET_NAME} PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}
         $<TARGET_PROPERTY:inference_engine_transformations,INTERFACE_INCLUDE_DIRECTORIES>
-        ${CLDNN_TOP_FOLDER}/api)
+        ${clDNN_SOURCE_DIR}/api)
 
 set_target_properties(${TARGET_NAME} PROPERTIES INTERPROCEDURAL_OPTIMIZATION_RELEASE ${ENABLE_LTO})
 
