--- a/inference-engine/tools/compile_tool/CMakeLists.txt
+++ b/inference-engine/tools/compile_tool/CMakeLists.txt
@@ -11,10 +11,7 @@ file(GLOB SRCS
 add_executable(${TARGET_NAME} ${SRCS})
 
 target_include_directories(${TARGET_NAME} SYSTEM PRIVATE
-    ${IE_MAIN_SOURCE_DIR}/include
-    ${IE_MAIN_SOURCE_DIR}/src/vpu/graph_transformer/include
-    ${IE_MAIN_SOURCE_DIR}/src/vpu/common/include
-    ${IE_MAIN_SOURCE_DIR}/src/plugin_api
+    $<TARGET_PROPERTY:vpu_graph_transformer,INTERFACE_INCLUDE_DIRECTORIES>
 )
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
@@ -25,6 +22,7 @@ endif()
 
 target_link_libraries(${TARGET_NAME} PRIVATE
     inference_engine
+    inference_engine_plugin_api
     gflags
     ie_samples_utils
 )
