--- a/inference-engine/src/preprocessing/CMakeLists.txt
+++ b/inference-engine/src/preprocessing/CMakeLists.txt
@@ -14,17 +14,17 @@ file(GLOB LIBRARY_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 function(ie_avx512_core_optimization_flags flags)
     if(WIN32)
         if(CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
-            set(${flags} "/QxCORE-AVX512" PARENT_SCOPE)
+            set(${flags} /QxCORE-AVX512 PARENT_SCOPE)
         elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-            set(${flags} "/arch:AVX512" PARENT_SCOPE)
+            set(${flags} /arch:AVX512 PARENT_SCOPE)
         else()
             message(WARNING "Unsupported CXX compiler ${CMAKE_CXX_COMPILER_ID}")
         endif()
     else()
         if(CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
-            set(${flags} "-xCORE-AVX512" PARENT_SCOPE)
+            set(${flags} -xCORE-AVX512 PARENT_SCOPE)
         else()
-            set(${flags} "-mavx512f -mavx512bw -mavx512dq -mfma" PARENT_SCOPE)
+            set(${flags} -mavx512f -mavx512bw -mavx512dq -mfma PARENT_SCOPE)
         endif()
     endif()
 endfunction()
