--- a/inference-engine/tests_deprecated/behavior/vpu/CMakeLists.txt
+++ b/inference-engine/tests_deprecated/behavior/vpu/CMakeLists.txt
@@ -55,6 +55,7 @@ function(enable_vpu TARGET_NAME FLAG_NAME PLUGIN_NAME)
         target_compile_definitions(${TARGET_NAME} PRIVATE __PC__)
 
         target_include_directories(${TARGET_NAME} PRIVATE
+                $<TARGET_PROPERTY:vpu_graph_transformer,INTERFACE_INCLUDE_DIRECTORIES>
                 ${CMAKE_CURRENT_SOURCE_DIR}/myriad_tests
                 ${IE_MAIN_SOURCE_DIR}/thirdparty/movidius
                 ${IE_MAIN_SOURCE_DIR}/src/inference_engine
