--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -46,7 +46,7 @@ if(NOT ENABLE_DOCKER)
 
     install(TARGETS templatePlugin template_extension
             RUNTIME DESTINATION ${IE_CPACK_RUNTIME_PATH} COMPONENT tests EXCLUDE_FROM_ALL
-            LIBRARY DESTINATION ${IE_CPACK_LIBRARY_PATH} COMPONENT tests EXCLUDE_FROM_ALL)
+            LIBRARY DESTINATION ${IE_CPACK_RUNTIME_PATH} COMPONENT tests EXCLUDE_FROM_ALL)
     if(ENABLE_FUNCTIONAL_TESTS)
         install(TARGETS templateFuncTests
                 RUNTIME DESTINATION tests COMPONENT tests EXCLUDE_FROM_ALL)
