Revise NonZero op (#5909)
* Use ngraph rtti macros

* add visitor test

* add visitor test cases to cover all possibilities

* add boolean case to type prop tests

* add boolean type to sslt

* add nonzero to trusted op list

* multiply dimensions when input shape is dynamic

* Add and disable cpu instantiations of slts

* Add missing coma in skip tests config for cpu

* Fix expected output shapes in type prop testcases

* add partialshape input cases to type prop tests

--- a/ngraph/test/CMakeLists.txt
+++ b/ngraph/test/CMakeLists.txt
@@ -257,6 +257,7 @@ set(SRC
     visitors/op/mvn.cpp
     visitors/op/negative.cpp
     visitors/op/non_max_suppression.cpp
+    visitors/op/non_zero.cpp
     visitors/op/normalize_l2.cpp
     visitors/op/one_hot.cpp
     visitors/op/pad.cpp
