Conditional installation of benchmark_app

--- a/inference-engine/CMakeLists.txt
+++ b/inference-engine/CMakeLists.txt
@@ -46,9 +46,14 @@ elseif(WIN32)
             PATTERN .clang-format EXCLUDE)
 endif()
 
-install(TARGETS format_reader benchmark_app
+install(TARGETS format_reader
         RUNTIME DESTINATION ${IE_CPACK_RUNTIME_PATH} COMPONENT tests EXCLUDE_FROM_ALL
         LIBRARY DESTINATION ${IE_CPACK_LIBRARY_PATH} COMPONENT tests EXCLUDE_FROM_ALL)
+
+if(TARGET benchmark_app)
+    install(TARGETS benchmark_app
+            RUNTIME DESTINATION tests COMPONENT tests EXCLUDE_FROM_ALL)
+endif()
 
 # install C samples
 
