--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,7 @@ function(build_ngraph)
 
     add_subdirectory(ngraph)
     set(NGRAPH_LIBRARIES ngraph PARENT_SCOPE)
+    set(FRONTEND_LIBRARIES frontend_manager PARENT_SCOPE)
 endfunction()
 
 function(openvino_developer_export_targets)
